fix dark mode

--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -82,3 +82,11 @@ th {
   -webkit-mask-image: var(--md-admonition-icon--directions);
           mask-image: var(--md-admonition-icon--directions); 
 }
+
+/*
+[data-md-color-scheme="ghost"] {
+  --md-primary-fg-color:        #000000;
+  --md-primary-fg-color--light: #ff0000;
+  --md-primary-fg-color--dark:  #00ff00;
+}
+*/
